--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - python=3.10
   - pytorch=2.1.0
   - pip:
+    - accelerate==0.23.0
     - black==21.7b0
     - click==8.0.4
     - deepdiff==6.3.0
