--- a/environment.yml
+++ b/environment.yml
@@ -22,4 +22,5 @@ dependencies:
     - pytest==7.4.3
     - pytest-cov>=3.0.0
     - pytest-timeout>=2.1.0
+    - scikit-learn==1.3.2
     - transformers==4.35.0
