--- a/environment.yml
+++ b/environment.yml
@@ -13,14 +13,16 @@ dependencies:
     - accelerate==0.23.0
     - black==21.7b0
     - click==8.0.4
+    - datasets==2.15.0
     - deepdiff==6.3.0
     - fire
     - flake8==3.9.2
     - isort==5.9.2
     - neptune==1.8.2
     - notebook
+    - peft==0.7.1
     - pytest==7.4.3
     - pytest-cov>=3.0.0
     - pytest-timeout>=2.1.0
     - scikit-learn==1.3.2
-    - transformers==4.35.0
+    - transformers==4.36.1
